language/move-lang/tests/move_check/translated_ir_tests/signer/is_resource_read_ref_transitive.exp
error: 

   ┌── tests/move_check/translated_ir_tests/signer/is_resource_read_ref_transitive.move:5:9 ───
   │
 5 │         *&x
   │         ^^^ Invalid dereference. Can only dereference references to copyable types
   ·
 4 │         let x = S<signer> { s };
   │                 --------------- The type: '0x8675309::M::S<signer>'
   ·
 4 │         let x = S<signer> { s };
   │                   ------ Is found to be a non-copyable type here
   │

error: 

    ┌── tests/move_check/translated_ir_tests/signer/is_resource_read_ref_transitive.move:15:9 ───
    │
 15 │         x.s
    │         ^^^ Invalid implicit copy of field 's'.
    ·
 14 │         let x = S<signer> { s };
    │                   ------ The type: 'signer'
    ·
 14 │         let x = S<signer> { s };
    │                   ------ Is declared as a non-copyable type here
    │

